fix reg auth. a couple js bugs

--- a/client/webserver/site/src/html/bodybuilder.tmpl
+++ b/client/webserver/site/src/html/bodybuilder.tmpl
@@ -13,7 +13,7 @@
 </head>
 <body >
   <div class="popup-notes d-hide" id="popupNotes">
-    <span data-tmpl="note fs15">
+    <span data-tmpl="note" class="fs15">
       <div class="note-indicator d-inline-block" data-tmpl="indicator"></div>
       <span data-tmpl="text"></span>
     </span>
