fix fee and tip caps

--- a/client/webserver/site/src/css/mixins.scss
+++ b/client/webserver/site/src/css/mixins.scss
@@ -21,6 +21,15 @@
   }
 }
 
+@mixin hidden-overflow {
+  overflow: auto;
+  scrollbar-width: none;  /* Firefox */
+
+  &::-webkit-scrollbar {
+    display: none;  /* Safari and Chrome */
+  }
+}
+
 @mixin fill-abs {
   position: absolute;
   top: 0;
