--- a/client/webserver/site/src/html/order.tmpl
+++ b/client/webserver/site/src/html/order.tmpl
@@ -117,7 +117,7 @@
         </div>
 
         <div data-tmpl="cancelInfoDiv">
-          <div class="text-center fs20 red">[[[Cancellation]]]</div>
+          <div class="text-center fs20 text-danger">[[[Cancellation]]]</div>
           <div class="text-center fs16" data-tmpl="cancelInfo">
             <span data-tmpl="cancelAmount"></span> <img src="" class="micro-icon" data-tmpl="cancelIcon"> (<span data-tmpl="cancelOrderPortion"></span>)
           </div>
@@ -189,7 +189,7 @@
               </div>
             </div>
             <div class="px-3 pb-3 d-hide" data-tmpl="refund">
-              <span class="match-data-label red">[[[Refund]]] (<span data-tmpl="refundAsset"></span>, [[[you]]])</span><br>
+              <span class="match-data-label text-danger">[[[Refund]]] (<span data-tmpl="refundAsset"></span>, [[[you]]])</span><br>
               <span data-tmpl="refundPending"></span>
               <a target="_blank" class="mono plainlink" data-tmpl="refundCoin"></a>
             </div>
