--- a/client/webserver/site/src/css/market.scss
+++ b/client/webserver/site/src/css/market.scss
@@ -434,7 +434,7 @@ div[data-handler=markets] {
       }
     }
 
-    button.selected {
+    button {
       &.buygreen-bg {
         background-color: var(--market-buygreen-bg);
       }
