philemon review. fix hover menu. fix auto-wallet creation config

--- a/client/webserver/site/src/html/wallets.tmpl
+++ b/client/webserver/site/src/html/wallets.tmpl
@@ -162,10 +162,10 @@
               <div class="flex-grow-1 flex-stretch-column">
                 <div class="d-flex flex-column align-items-center py-3">
                   <span class="grey demi">Network Fee Rate</span>
-                  <span id="feeStateNetRate">
+                  <span id="feeStateNetRate" data-conversion-value>
                     <span class="fs20" data-value></span>
                     <span class="fs17 grey">
-                      <span data-tmpl="feeRateUnit" data-unit></span>
+                      <span data-unit-box><span data-unit></span></span>
                       /
                       <span data-denom></span>
                     </span>
@@ -173,10 +173,10 @@
                 </div>
                 <div class="d-flex flex-column align-items-center py-3 border-top">
                   <span class="grey demi">Send Fees</span>
-                  <span id="feeStateSendFees">
+                  <span id="feeStateSendFees" data-conversion-value>
                     <span class="fs20" data-value></span>
                     <span class="grey fs17">
-                      <span data-unit></span>
+                      <span data-unit-box><span data-unit></span></span>
                       and up
                     </span>
                   </span>
@@ -196,10 +196,10 @@
                 </div>
                 <div class="d-flex flex-column align-items-center py-3 border-top">
                   <span class="grey demi">Swap Fees</span>
-                  <span id="feeStateSwapFees">
+                  <span id="feeStateSwapFees" data-conversion-value>
                     <span class="fs20" data-value></span>
                     <span class="grey fs17">
-                      <span data-unit></span>
+                      <span data-unit-box><span data-unit></span></span>
                       and up
                     </span>
                   </span>
