--- a/client/webserver/site/src/css/main.scss
+++ b/client/webserver/site/src/css/main.scss
@@ -148,8 +148,19 @@ z-index: 1000;
 }
 
 [data-unit] {
-  cursor: default;
   color: var(--hint-color);
+}
+
+[data-unit-box] {
+  cursor: default;
+  position: relative;
+  overflow: visible;
+
+  & > div { // unit choice menu
+    left: -2rem;
+    z-index: 10;
+    color: var(--text-color);
+  }
 }
 
 #profileBox,
