create transitional ui

--- a/client/webserver/site/src/html/mmsettings.tmpl
+++ b/client/webserver/site/src/html/mmsettings.tmpl
@@ -744,10 +744,10 @@
           [[[loading_oracles]]]
           <div class="ico-spinner spinner fs14 d-inline-block" data-tmpl="syncSpinner"></div>
         </div>
-        <div id="oraclesErr" class="d-hide">
-          <span class="text-danger text-break" id="oraclesErrMsg"></span>
+        <div id="oraclesErr" class="d-hide p-2">
+          <span class="text-danger" id="oraclesErrMsg"></span>
         </div>
-        <div id="noOracles" class="d-hide">
+        <div id="noOracles" class="d-hide p-2">
           [[[no_oracles]]]
         </div>
 
