--- a/client/webserver/site/src/html/bodybuilder.tmpl
+++ b/client/webserver/site/src/html/bodybuilder.tmpl
@@ -201,8 +201,8 @@
       <div id="lostNonceTmpl" class="flex-stretch-column mt-2">
         <div class="text-justify">
           A <span data-tmpl="assetName"></span>
-          transaction might be lost. A transaction with a higher nonce was
-          confirmed first. You can abandon the transaction
+          transaction might be lost. A different transaction with the same
+          nonce was confirmed first. You can abandon the transaction
         </div>
         <div data-tmpl="txTable"></div>
         <div class="d-flex mt-2">
