eth: refactor tx montoring, handle tx resubmissions better, general refactoring (#2752)
* fix fee and tip caps

* redo nonces and pending txs

* safer fee rates

* use NonceAt along with PendingNonceAt to characterize discrepancies

* better waitgroup and db connect/run pattern

--- a/client/webserver/site/src/css/market.scss
+++ b/client/webserver/site/src/css/market.scss
@@ -420,10 +420,6 @@ div[data-handler=markets] {
       margin: 0 5px;
     }
 
-    .red {
-      color: $danger;
-    }
-
     .disclaimer {
       text-align: justify;
     }
@@ -438,7 +434,7 @@ div[data-handler=markets] {
       }
     }
 
-    button.selected {
+    button {
       &.buygreen-bg {
         background-color: var(--market-buygreen-bg);
       }
